new design changes for contrast

--- a/src/components/Companeis.astro
+++ b/src/components/Companeis.astro
@@ -127,8 +127,7 @@ const companies = [
               )}
             </div>
 
-            <h3 class="text-sm font-bold text-gray-700 darkcanceltext-white mb-1">{company.name}</h3>
-            <span class="text-xs text-secondary">{company.metric}</span>
+            {/* <h3 class="text-sm font-bold text-gray-700 darkcanceltext-white">{company.name}</h3> */}
           </div>
         </div>
       ))}
