--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -9,11 +9,12 @@ import Container from "./Container.astro";
             <div class="flex text-white flex-wrap items-center justify-between py-2 gap-6 md:py-4 md:gap-0 relative">
                 <input aria-hidden="true" type="checkbox" name="toggle_nav" id="toggle_nav" class="hidden peer">
                 <div class="relative z-20 w-full flex justify-between lg:w-max md:px-0">
-                    <a href="/" aria-label="logo" class="flex space-x-2 items-center">
+                    <a href="/" aria-label="logo" class="flex items-center">
                         <div aria-hidden="true" class="flex space-x-1">
                             <!-- <div class="h-4 w-4 rounded-full bg-gray-900"></div> -->
                         </div>
-                        <span class="text-2xl font-bold">Establish Cred</span>
+                        <!-- <span class="text-2xl font-bold">Establish Cred</span> -->
+                        <img src="/images/logo.png" alt="logo" class="h-12">
                     </a>
                     
                     <div class="relative flex items-center lg:hidden max-h-10">
