--- a/src/components/Logos.astro
+++ b/src/components/Logos.astro
@@ -12,29 +12,16 @@ const mediaPartners = [
   "Business Insider"
 ];
 
-const clients = [
-  "Adobe",
-  "Salesforce",
-  "Microsoft",
-  "Google",
-  "Apple",
-  "Amazon",
-  "Meta",
-  "Twitter"
-];
 ---
 
-<section class="py- relative bg-gradient-to-b from-white to-red-50/10">
+<section class="py- relative">
   <Container>
-    <div class="max-w-6xl mx-auto space-y-12">
+    <div class="max-w-6xl mx-auto">
       <div>
         <div class="text-center max-w-3xl mx-auto mb-20">
-          <h1 class="text-4xl md:text-5xl font-bold text-gray-800 darkcanceltext-white mb-6">
-            Key Media Outlets in Our Portfolio
+          <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-6">
+            Media Coverage
           </h1>
-          <!-- <p class="text-xl text-gray-600 darkcanceltext-gray-300">
-            For Early-Stage and High-Growth Brands
-          </p> -->
           <div class="mt-6 w-20 h-1 bg-secondary/30 mx-auto rounded-full"></div>
         </div>
         
