--- a/src/components/Companeis.astro
+++ b/src/components/Companeis.astro
@@ -54,7 +54,7 @@ const companies = [
   },
   {
     name: "ModOLabs",
-    logo: "/images_companies/modolabs.com.png",
+    logo: "/images_companies/modo.svg",
     metric: "21M+ Reach"
   },
   {
@@ -69,7 +69,7 @@ const companies = [
   },
   {
     name: "Saige Consulting",
-    logo: "/images_companies/saigeconsulting.com.png",
+    logo: "/images_companies/saga.svg",
     metric: "24M+ Reach"
   },
   {
