--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -6,42 +6,42 @@ const testimonials = [
     name: "Rich Cabrera",
     role: "Founder",
     company: "ReadyPlayerDAO",
-    image: "./images/avatars/avatar.webp",
+    image: "./images/avatars/rich.png",
     content: "EstablishCred was very responsive and incredibly helpful throughout the entire process of my interview with the Forbes editor. Through setup, timing, explanation, and execution, as well as keeping me informed, I couldn't recommend them more!"
   },
   {
     name: "Pamela Richter",
     role: "Co founder / CRO",
     company: "B2Chat",
-    image: "./images/avatars/avatar.webp",
+    image: "./images/avatars/pamela.png",
     content: "It was great working with EstablishCred. They were clear with the proposal from the beginning and delivered as promised. They have a lot of knowledge in establishing credibility for companies using various strategies. I will continue working with them and recommending them."
   },
   {
     name: "Bryan Plaster",
     role: "CEO and Co-founder",
     company: "Intelligage",
-    image: "./images/avatars/avatar.webp",
+    image: "./images/avatars/bryan.png",
     content: "EstablishCred is awesome to work with. They under promise and over-deliver exactly what they say they will do. They have deep knowledge of establishing credibility with companies, and I plan to continue working with them and recommending them to everyone I know!"
   },
   {
     name: "Jason Crystal",
     role: "CEO",
     company: "MiVenture",
-    image: "./images/avatars/avatar.webp",
+    image: "./images/avatars/json.png",
     content: "EstablishCred helped us get the word out about major milestones, like product launches and our acquisition. They're easy to work with and understand the constraints companies have especially startups. Very professional and transparent. If you need PR, talk to EstablishCred!"
   },
   {
     name: "David Kamara",
     role: "Founder",
     company: "Cape Sierra Capital",
-    image: "./images/avatars/avatar.webp",
+    image: "./images/avatars/david.png",
     content: "EstablishCred's team brings creative thinking, marketing prowess, and a can-do attitude to small and medium enterprises. They are extremely knowledgeable and great to work with. I highly recommend them to anyone seeking to improve their online digital brand."
   },
   {
     name: "Julian Pscheid",
     role: "Co-Founder",
     company: "EMERGE",
-    image: "./images/avatars/avatar.webp",
+    image: "./images/avatars/julian.png",
     content: "EstablishCred is great to work with. They are very diligent and reliable, always responsive to any questions I have. They delivered as promised every step along the way. I can definitely recommend them to anyone looking for guidance in online brand building."
   },
   // {
