--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -34,12 +34,12 @@ import Container from "./Container.astro";
                         <ul class="tracking-wide font-medium lg:text-sm flex-col flex lg:flex-row gap-6 lg:gap-0">
                             <li>
                                 <a href="#features" class="block md:px-4 transition hover:text-primary">
-                                    <span>Features</span>
+                                    <span>Solutions</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#solution" class="block md:px-4 transition hover:text-primary">
-                                    <span>Solution</span>
+                                    <span>Why Us?</span>
                                 </a>
                             </li>
                             <li>
@@ -49,12 +49,12 @@ import Container from "./Container.astro";
                             </li>
                             <li>
                                 <a href="#templates" class="block md:px-4 transition hover:text-primary">
-                                    <span>Free Templates</span>
+                                    <span>Case Studies</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#footer" class="block md:px-4 transition hover:text-primary">
-                                    <span>Team</span>
+                                    <span>FAQ</span>
                                 </a>
                             </li>
                         </ul>
