--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -9,9 +9,9 @@
                       <img src="/images/logo.png" alt="logo" class="h-12 brightness-[0.2]">
                         </svg>
                     </div>
-                    <p class="text-gray-600 max-w-md">
+                    <!-- <p class="text-gray-600 max-w-md">
                         Empowering businesses to establish their market presence through strategic sales operations and credibility building.
-                    </p>
+                    </p> -->
                 </div>
                 
                 <div class="grid md:grid-cols-2 gap-6">
