--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,10 +27,10 @@ import Companeis from "../components/Companeis.astro";
   <div class="mt-40">
   <main class="space-y-40 mb-40">
     <Intro />
-    <Features1 />
-    <Features2 />
-    <Features3 />
-    <Features4 />
+    <!-- <Features1 /> -->
+    <!-- <Features2 /> -->
+    <!-- <Features3 /> -->
+    <!-- <Features4 /> -->
     <Logos />
     <Vs2 />
 
